manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "testbuybc-6d50"
    labels:
        app: "testbuybc-6d50"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: test-buybc87bb-testbuybc-6d50.c19e843f045b49c5a7a8.canadacentral.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "testbuybc-6d50"
                servicePort: 443
